--- a/assets/sass/_configuration.sass
+++ b/assets/sass/_configuration.sass
@@ -1,7 +1,14 @@
 $heading-font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif
 $body-font-family: $heading-font-family
 
-$header-background: none
+$header-background: white
 $header-border-bottom-width: 0
-$hero-background-color: none
+$hero-background-color: white
 $footer-background-color: none
+$color-accent: #e88e74 !default
+$btn-hover-color: $color-accent !default
+$btn-hover-border: pxToRem(1) solid var(--color-accent) !default
+
+
+$block-gallery-carousel-background: var(--color-background) !default
+
